--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,12 +73,6 @@
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 html,
 body {
   max-width: 100vw;
@@ -87,12 +81,6 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 a {
@@ -104,4 +92,14 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+@media (max-width: 720px) {
+  .chart-container {
+    width: 80%;
+  }
+}
+
+.chart-container {
+  min-width: 40%;
 }
