--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,52 +40,21 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  color: rgb(var(--foreground-rgb));
 }
 
 @media (prefers-color-scheme: dark) {
@@ -96,10 +65,36 @@ a {
 
 @media (max-width: 720px) {
   .chart-container {
-    width: 80%;
+    margin: 1.5rem auto;
+    width: 90%;
+  }
+}
+
+@media (min-width: 720px) {
+  .chart-container {
+    margin: 2rem;
+    width: 40%;
   }
 }
 
 .chart-container {
-  min-width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button {
+  background-color: cornflowerblue;
+  border-radius: .5rem;
+  color: white;
+  padding: .7rem 1rem;
+  margin: 1rem;
+}
+
+.button {
+  text-decoration: none;
+}
+
+.button:hover {
+  color: #ddf
 }
